CORRECTION Task 9. Better alignment about us, Section About us class

--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -390,10 +390,9 @@ ul.row {
 
 /* Section ABOUT US */
 
-.col-1-2 {
+.section-about-us [class^="col-"] {
     align-self: center;
 }
-
 
 /*** 4. CARD ***/
 
